--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ticket101/common": "^1.0.6",
+    "body-parser": "^1.20.2",
+    "cookie-session": "^2.1.0",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/cookie-session": "^2.0.48"
   }
 }
