--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
+    "start": "ts-node-dev --env-file=src/.env src/index.ts",
     "test": "jest --watchAll --no-cache"
   },
   "keywords": [],
@@ -14,12 +14,15 @@
     "@ticket101/common": "^1.0.6",
     "body-parser": "^1.20.2",
     "cookie-session": "^2.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^8.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/cookie-session": "^2.0.48"
+    "@types/cookie-session": "^2.0.48",
+    "@types/cors": "^2.8.17"
   }
 }
